@@ -23,6 +23,14 @@
 
 #include "asap_internal.h"
 
+#ifdef ASAP_ONLY_INFO
+
+#define GET_PLAYER(name)  NULL
+
+#else
+
+#define GET_PLAYER(name)  GET_RESOURCE(name, obx)
+
 FUNC(int, ASAP_GetByte, (P(ASAP_State PTR, ast), P(int, addr)))
 {
 	switch (addr & 0xff0f) {
@@ -99,9 +107,13 @@ FUNC(void, ASAP_PutByte, (P(ASAP_State PTR, ast), P(int, addr), P(int, data)))
 		dPutByte(addr, data);
 }
 
+#endif /* ASAP_ONLY_INFO */
+
 #define UWORD(array, index)  (UBYTE(array[index]) + (UBYTE(array[(index) + 1]) << 8))
 
 #ifndef ASAP_ONLY_SAP
+
+#ifndef ASAP_ONLY_INFO
 
 #ifndef JAVA
 #include "players.h"
@@ -117,6 +129,8 @@ CONST_ARRAY(byte, cmr_bass_table)
 	0x25, 0x24, 0x21, 0x1F, 0x1E
 END_CONST_ARRAY;
 
+#endif /* ASAP_ONLY_INFO */
+
 CONST_ARRAY(int, perframe2fastplay)
 	312, 312 / 2, 312 / 3, 312 / 4
 END_CONST_ARRAY;
@@ -126,17 +140,21 @@ PRIVATE FUNC(abool, load_native, (
 	P(ASAP_State PTR, ast), P(ASAP_ModuleInfo PTR, module_info),
 	P(CONST BYTEARRAY, module), P(int, module_len), P(RESOURCE, player)))
 {
+#ifndef ASAP_ONLY_INFO
 	V(int, player_last_byte);
+#endif
 	V(int, music_last_byte);
 	V(int, block_len);
 	if ((UBYTE(module[0]) != 0xff || UBYTE(module[1]) != 0xff)
 	 && (module[0] != 0 || module[1] != 0)) /* some CMC and clones start with zeros */
 		return FALSE;
+	module_info _ music = UWORD(module, 2);
+#ifndef ASAP_ONLY_INFO
 	module_info _ player = UWORD(player, 2);
 	player_last_byte = UWORD(player, 4);
-	module_info _ music = UWORD(module, 2);
 	if (module_info _ music <= player_last_byte)
 		return FALSE;
+#endif
 	music_last_byte = UWORD(module, 4);
 	if (module_info _ music <= 0xd7ff && music_last_byte >= 0xd000)
 		return FALSE;
@@ -154,10 +172,12 @@ PRIVATE FUNC(abool, load_native, (
 		if (10 + block_len + info_len != module_len)
 			return FALSE;
 	}
+#ifndef ASAP_ONLY_INFO
 	if (ast != NULL) {
 		COPY_ARRAY(ast _ memory, module_info _ music, module, 6, block_len);
 		COPY_ARRAY(ast _ memory, module_info _ player, player, 6, player_last_byte + 1 - module_info _ player);
 	}
+#endif
 	return TRUE;
 }
 
@@ -256,8 +276,10 @@ PRIVATE FUNC(abool, parse_cmc, (
 	module_info _ type = type;
 	if (!load_native(ast, module_info, module, module_len, player))
 		return FALSE;
+#ifndef ASAP_ONLY_INFO
 	if (ast != NULL && type == ASAP_TYPE_CMR)
 		COPY_ARRAY(ast _ memory, 0x500 + CMR_BASS_TABLE_OFFSET, cmr_bass_table, 0, sizeof(cmr_bass_table));
+#endif
 	last_pos = 0x54;
 	while (--last_pos >= 0) {
 		if (UBYTE(module[0x206 + last_pos]) < 0xb0
@@ -351,7 +373,7 @@ PRIVATE FUNC(abool, parse_dlt, (
 	else if (module_len != 0x2c07)
 		return FALSE;
 	module_info _ type = ASAP_TYPE_DLT;
-	if (!load_native(ast, module_info, module, module_len, GET_RESOURCE(dlt, obx))
+	if (!load_native(ast, module_info, module, module_len, GET_PLAYER(dlt))
 	 || module_info _ music != 0x2000) {
 		return FALSE;
 	}
@@ -452,7 +474,7 @@ PRIVATE FUNC(abool, parse_mpt, (
 	if (module_len < 0x1d0)
 		return FALSE;
 	module_info _ type = ASAP_TYPE_MPT;
-	if (!load_native(ast, module_info, module, module_len, GET_RESOURCE(mpt, obx)))
+	if (!load_native(ast, module_info, module, module_len, GET_PLAYER(mpt)))
 		return FALSE;
 	track0_addr = UWORD(module, 2) + 0x1ca;
 	if (UBYTE(module[0x1c6]) + (UBYTE(module[0x1ca]) << 8) != track0_addr)
@@ -689,7 +711,7 @@ PRIVATE FUNC(abool, parse_rmt, (
 		return FALSE;
 	module_info _ type = ASAP_TYPE_RMT;
 	if (!load_native(ast, module_info, module, module_len,
-		module_info _ channels == 2 ? GET_RESOURCE(rmt8, obx) : GET_RESOURCE(rmt4, obx)))
+		module_info _ channels == 2 ? GET_PLAYER(rmt8) : GET_PLAYER(rmt4)))
 		return FALSE;
 	song_len = UWORD(module, 4) + 1 - UWORD(module, 0x14);
 	if (pos_shift == 3 && (song_len & 4) != 0
@@ -781,7 +803,7 @@ PRIVATE FUNC(abool, parse_tmc, (
 	if (module_len < 0x1d0)
 		return FALSE;
 	module_info _ type = ASAP_TYPE_TMC;
-	if (!load_native(ast, module_info, module, module_len, GET_RESOURCE(tmc, obx)))
+	if (!load_native(ast, module_info, module, module_len, GET_PLAYER(tmc)))
 		return FALSE;
 	module_info _ channels = 2;
 	i = 0;
@@ -899,7 +921,7 @@ PRIVATE FUNC(abool, parse_tm2, (
 	if (module_len < 0x3a4)
 		return FALSE;
 	module_info _ type = ASAP_TYPE_TM2;
-	if (!load_native(ast, module_info, module, module_len, GET_RESOURCE(tm2, obx)))
+	if (!load_native(ast, module_info, module, module_len, GET_PLAYER(tm2)))
 		return FALSE;
 	i = module[0x25];
 	if (i < 1 || i > 4)
@@ -1297,17 +1319,17 @@ PRIVATE FUNC(abool, parse_file, (
 		return parse_sap(ast, module_info, module, module_len);
 #ifndef ASAP_ONLY_SAP
 	case ASAP_EXT('C', 'M', 'C'):
-		return parse_cmc(ast, module_info, module, module_len, ASAP_TYPE_CMC, GET_RESOURCE(cmc, obx));
+		return parse_cmc(ast, module_info, module, module_len, ASAP_TYPE_CMC, GET_PLAYER(cmc));
 	case ASAP_EXT('C', 'M', '3'):
-		return parse_cmc(ast, module_info, module, module_len, ASAP_TYPE_CM3, GET_RESOURCE(cm3, obx));
+		return parse_cmc(ast, module_info, module, module_len, ASAP_TYPE_CM3, GET_PLAYER(cm3));
 	case ASAP_EXT('C', 'M', 'R'):
-		return parse_cmc(ast, module_info, module, module_len, ASAP_TYPE_CMR, GET_RESOURCE(cmc, obx));
+		return parse_cmc(ast, module_info, module, module_len, ASAP_TYPE_CMR, GET_PLAYER(cmc));
 	case ASAP_EXT('C', 'M', 'S'):
 		module_info _ channels = 2;
-		return parse_cmc(ast, module_info, module, module_len, ASAP_TYPE_CMS, GET_RESOURCE(cms, obx));
+		return parse_cmc(ast, module_info, module, module_len, ASAP_TYPE_CMS, GET_PLAYER(cms));
 	case ASAP_EXT('D', 'M', 'C'):
 		module_info _ fastplay = 156;
-		return parse_cmc(ast, module_info, module, module_len, ASAP_TYPE_CMC, GET_RESOURCE(cmc, obx));
+		return parse_cmc(ast, module_info, module, module_len, ASAP_TYPE_CMC, GET_PLAYER(cmc));
 	case ASAP_EXT('D', 'L', 'T'):
 		return parse_dlt(ast, module_info, module, module_len);
 	case ASAP_EXT('M', 'P', 'T'):
@@ -1334,6 +1356,8 @@ FUNC(abool, ASAP_GetModuleInfo, (
 {
 	return parse_file(NULL, module_info, filename, module, module_len);
 }
+
+#ifndef ASAP_ONLY_INFO
 
 FUNC(abool, ASAP_Load, (
 	P(ASAP_State PTR, ast), P(STRING, filename),
@@ -1650,35 +1674,7 @@ FUNC(int, ASAP_Generate, (P(ASAP_State PTR, ast), P(VOIDPTR, buffer), P(int, buf
 	return ASAP_GenerateAt(ast, buffer, 0, buffer_len, format);
 }
 
-#ifdef C
-
-static abool has_two_digits(const char *s)
-{
-	return s[0] >= '0' && s[0] <= '9' && s[1] >= '0' && s[1] <= '9';
-}
-
-/* "DD/MM/YYYY", "MM/YYYY", "YYYY" -> "YYYY" */
-abool ASAP_DateToYear(const char *date, char *year)
-{
-	if (!has_two_digits(date))
-		return FALSE;
-	if (date[2] == '/') {
-		date += 3;
-		if (!has_two_digits(date))
-			return FALSE;
-		if (date[2] == '/') {
-			date += 3;
-			if (!has_two_digits(date))
-				return FALSE;
-		}
-	}
-	if (!has_two_digits(date + 2) || date[4] != '\0')
-		return FALSE;
-	memcpy(year, date, 5);
-	return TRUE;
-}
-
-#ifndef ASAP_ONLY_SAP
+#if defined(C) && !defined(ASAP_ONLY_SAP)
 
 abool ASAP_ChangeExt(char *filename, const char *ext)
 {
@@ -2229,6 +2225,36 @@ int ASAP_Convert(
 	}
 }
 
-#endif /* ASAP_ONLY_SAP */
+#endif /* defined(C) && !defined(ASAP_ONLY_SAP) */
 
-#endif /* C */
+#endif /* ASAP_ONLY_INFO */
+
+#ifdef C
+
+static abool has_two_digits(const char *s)
+{
+	return s[0] >= '0' && s[0] <= '9' && s[1] >= '0' && s[1] <= '9';
+}
+
+/* "DD/MM/YYYY", "MM/YYYY", "YYYY" -> "YYYY" */
+abool ASAP_DateToYear(const char *date, char *year)
+{
+	if (!has_two_digits(date))
+		return FALSE;
+	if (date[2] == '/') {
+		date += 3;
+		if (!has_two_digits(date))
+			return FALSE;
+		if (date[2] == '/') {
+			date += 3;
+			if (!has_two_digits(date))
+				return FALSE;
+		}
+	}
+	if (!has_two_digits(date + 2) || date[4] != '\0')
+		return FALSE;
+	memcpy(year, date, 5);
+	return TRUE;
+}
+
+#endif
